qt/network/gen_qnetworkreply.nim

import Qt5Network_libs

{.push raises: [].}

from system/ansi_c import c_free

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config -cflags Qt5Network")
{.compile("gen_qnetworkreply.cpp", cflags).}


type QNetworkReplyNetworkError* = cint
const
  QNetworkReplyNoError* = 0
  QNetworkReplyConnectionRefusedError* = 1
  QNetworkReplyRemoteHostClosedError* = 2
  QNetworkReplyHostNotFoundError* = 3
  QNetworkReplyTimeoutError* = 4
  QNetworkReplyOperationCanceledError* = 5
  QNetworkReplySslHandshakeFailedError* = 6
  QNetworkReplyTemporaryNetworkFailureError* = 7
  QNetworkReplyNetworkSessionFailedError* = 8
  QNetworkReplyBackgroundRequestNotAllowedError* = 9
  QNetworkReplyTooManyRedirectsError* = 10
  QNetworkReplyInsecureRedirectError* = 11
  QNetworkReplyUnknownNetworkError* = 99
  QNetworkReplyProxyConnectionRefusedError* = 101
  QNetworkReplyProxyConnectionClosedError* = 102
  QNetworkReplyProxyNotFoundError* = 103
  QNetworkReplyProxyTimeoutError* = 104
  QNetworkReplyProxyAuthenticationRequiredError* = 105
  QNetworkReplyUnknownProxyError* = 199
  QNetworkReplyContentAccessDenied* = 201
  QNetworkReplyContentOperationNotPermittedError* = 202
  QNetworkReplyContentNotFoundError* = 203
  QNetworkReplyAuthenticationRequiredError* = 204
  QNetworkReplyContentReSendError* = 205
  QNetworkReplyContentConflictError* = 206
  QNetworkReplyContentGoneError* = 207
  QNetworkReplyUnknownContentError* = 299
  QNetworkReplyProtocolUnknownError* = 301
  QNetworkReplyProtocolInvalidOperationError* = 302
  QNetworkReplyProtocolFailure* = 399
  QNetworkReplyInternalServerError* = 401
  QNetworkReplyOperationNotImplementedError* = 402
  QNetworkReplyServiceUnavailableError* = 403
  QNetworkReplyUnknownServerError* = 499



import gen_qnetworkreply_types
export gen_qnetworkreply_types

import
  gen_qiodevice,
  gen_qnetworkaccessmanager,
  gen_qnetworkrequest,
  gen_qobjectdefs,
  gen_qsslconfiguration,
  gen_qsslerror,
  gen_qsslpresharedkeyauthenticator,
  gen_qurl,
  gen_qvariant
export
  gen_qiodevice,
  gen_qnetworkaccessmanager,
  gen_qnetworkrequest,
  gen_qobjectdefs,
  gen_qsslconfiguration,
  gen_qsslerror,
  gen_qsslpresharedkeyauthenticator,
  gen_qurl,
  gen_qvariant

type cQNetworkReply*{.exportc: "QNetworkReply", incompleteStruct.} = object

proc fcQNetworkReply_metaObject(self: pointer, ): pointer {.importc: "QNetworkReply_metaObject".}
proc fcQNetworkReply_metacast(self: pointer, param1: cstring): pointer {.importc: "QNetworkReply_metacast".}
proc fcQNetworkReply_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QNetworkReply_metacall".}
proc fcQNetworkReply_tr(s: cstring): struct_miqt_string {.importc: "QNetworkReply_tr".}
proc fcQNetworkReply_trUtf8(s: cstring): struct_miqt_string {.importc: "QNetworkReply_trUtf8".}
proc fcQNetworkReply_close(self: pointer, ): void {.importc: "QNetworkReply_close".}
proc fcQNetworkReply_isSequential(self: pointer, ): bool {.importc: "QNetworkReply_isSequential".}
proc fcQNetworkReply_readBufferSize(self: pointer, ): clonglong {.importc: "QNetworkReply_readBufferSize".}
proc fcQNetworkReply_setReadBufferSize(self: pointer, size: clonglong): void {.importc: "QNetworkReply_setReadBufferSize".}
proc fcQNetworkReply_manager(self: pointer, ): pointer {.importc: "QNetworkReply_manager".}
proc fcQNetworkReply_operation(self: pointer, ): cint {.importc: "QNetworkReply_operation".}
proc fcQNetworkReply_request(self: pointer, ): pointer {.importc: "QNetworkReply_request".}
proc fcQNetworkReply_error(self: pointer, ): cint {.importc: "QNetworkReply_error".}
proc fcQNetworkReply_isFinished(self: pointer, ): bool {.importc: "QNetworkReply_isFinished".}
proc fcQNetworkReply_isRunning(self: pointer, ): bool {.importc: "QNetworkReply_isRunning".}
proc fcQNetworkReply_url(self: pointer, ): pointer {.importc: "QNetworkReply_url".}
proc fcQNetworkReply_header(self: pointer, header: cint): pointer {.importc: "QNetworkReply_header".}
proc fcQNetworkReply_hasRawHeader(self: pointer, headerName: struct_miqt_string): bool {.importc: "QNetworkReply_hasRawHeader".}
proc fcQNetworkReply_rawHeaderList(self: pointer, ): struct_miqt_array {.importc: "QNetworkReply_rawHeaderList".}
proc fcQNetworkReply_rawHeader(self: pointer, headerName: struct_miqt_string): struct_miqt_string {.importc: "QNetworkReply_rawHeader".}
proc fcQNetworkReply_rawHeaderPairs(self: pointer, ): struct_miqt_array {.importc: "QNetworkReply_rawHeaderPairs".}
proc fcQNetworkReply_attribute(self: pointer, code: cint): pointer {.importc: "QNetworkReply_attribute".}
proc fcQNetworkReply_sslConfiguration(self: pointer, ): pointer {.importc: "QNetworkReply_sslConfiguration".}
proc fcQNetworkReply_setSslConfiguration(self: pointer, configuration: pointer): void {.importc: "QNetworkReply_setSslConfiguration".}
proc fcQNetworkReply_ignoreSslErrors(self: pointer, errors: struct_miqt_array): void {.importc: "QNetworkReply_ignoreSslErrors".}
proc fcQNetworkReply_abort(self: pointer, ): void {.importc: "QNetworkReply_abort".}
proc fcQNetworkReply_ignoreSslErrors2(self: pointer, ): void {.importc: "QNetworkReply_ignoreSslErrors2".}
proc fcQNetworkReply_metaDataChanged(self: pointer, ): void {.importc: "QNetworkReply_metaDataChanged".}
proc fQNetworkReply_connect_metaDataChanged(self: pointer, slot: int) {.importc: "QNetworkReply_connect_metaDataChanged".}
proc fcQNetworkReply_finished(self: pointer, ): void {.importc: "QNetworkReply_finished".}
proc fQNetworkReply_connect_finished(self: pointer, slot: int) {.importc: "QNetworkReply_connect_finished".}
proc fcQNetworkReply_errorWithQNetworkReplyNetworkError(self: pointer, param1: cint): void {.importc: "QNetworkReply_errorWithQNetworkReplyNetworkError".}
proc fQNetworkReply_connect_errorWithQNetworkReplyNetworkError(self: pointer, slot: int) {.importc: "QNetworkReply_connect_errorWithQNetworkReplyNetworkError".}
proc fcQNetworkReply_errorOccurred(self: pointer, param1: cint): void {.importc: "QNetworkReply_errorOccurred".}
proc fQNetworkReply_connect_errorOccurred(self: pointer, slot: int) {.importc: "QNetworkReply_connect_errorOccurred".}
proc fcQNetworkReply_encrypted(self: pointer, ): void {.importc: "QNetworkReply_encrypted".}
proc fQNetworkReply_connect_encrypted(self: pointer, slot: int) {.importc: "QNetworkReply_connect_encrypted".}
proc fcQNetworkReply_sslErrors(self: pointer, errors: struct_miqt_array): void {.importc: "QNetworkReply_sslErrors".}
proc fQNetworkReply_connect_sslErrors(self: pointer, slot: int) {.importc: "QNetworkReply_connect_sslErrors".}
proc fcQNetworkReply_preSharedKeyAuthenticationRequired(self: pointer, authenticator: pointer): void {.importc: "QNetworkReply_preSharedKeyAuthenticationRequired".}
proc fQNetworkReply_connect_preSharedKeyAuthenticationRequired(self: pointer, slot: int) {.importc: "QNetworkReply_connect_preSharedKeyAuthenticationRequired".}
proc fcQNetworkReply_redirected(self: pointer, url: pointer): void {.importc: "QNetworkReply_redirected".}
proc fQNetworkReply_connect_redirected(self: pointer, slot: int) {.importc: "QNetworkReply_connect_redirected".}
proc fcQNetworkReply_redirectAllowed(self: pointer, ): void {.importc: "QNetworkReply_redirectAllowed".}
proc fQNetworkReply_connect_redirectAllowed(self: pointer, slot: int) {.importc: "QNetworkReply_connect_redirectAllowed".}
proc fcQNetworkReply_uploadProgress(self: pointer, bytesSent: clonglong, bytesTotal: clonglong): void {.importc: "QNetworkReply_uploadProgress".}
proc fQNetworkReply_connect_uploadProgress(self: pointer, slot: int) {.importc: "QNetworkReply_connect_uploadProgress".}
proc fcQNetworkReply_downloadProgress(self: pointer, bytesReceived: clonglong, bytesTotal: clonglong): void {.importc: "QNetworkReply_downloadProgress".}
proc fQNetworkReply_connect_downloadProgress(self: pointer, slot: int) {.importc: "QNetworkReply_connect_downloadProgress".}
proc fcQNetworkReply_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QNetworkReply_tr2".}
proc fcQNetworkReply_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QNetworkReply_tr3".}
proc fcQNetworkReply_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QNetworkReply_trUtf82".}
proc fcQNetworkReply_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QNetworkReply_trUtf83".}
proc fcQNetworkReply_delete(self: pointer) {.importc: "QNetworkReply_delete".}


func init*(T: type QNetworkReply, h: ptr cQNetworkReply): QNetworkReply =
  T(h: h)
proc metaObject*(self: QNetworkReply, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQNetworkReply_metaObject(self.h))

proc metacast*(self: QNetworkReply, param1: cstring): pointer =

  fcQNetworkReply_metacast(self.h, param1)

proc metacall*(self: QNetworkReply, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQNetworkReply_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QNetworkReply, s: cstring): string =

  let v_ms = fcQNetworkReply_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QNetworkReply, s: cstring): string =

  let v_ms = fcQNetworkReply_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc close*(self: QNetworkReply, ): void =

  fcQNetworkReply_close(self.h)

proc isSequential*(self: QNetworkReply, ): bool =

  fcQNetworkReply_isSequential(self.h)

proc readBufferSize*(self: QNetworkReply, ): clonglong =

  fcQNetworkReply_readBufferSize(self.h)

proc setReadBufferSize*(self: QNetworkReply, size: clonglong): void =

  fcQNetworkReply_setReadBufferSize(self.h, size)

proc manager*(self: QNetworkReply, ): gen_qnetworkaccessmanager.QNetworkAccessManager =

  gen_qnetworkaccessmanager.QNetworkAccessManager(h: fcQNetworkReply_manager(self.h))

proc operation*(self: QNetworkReply, ): gen_qnetworkaccessmanager.QNetworkAccessManagerOperation =

  gen_qnetworkaccessmanager.QNetworkAccessManagerOperation(fcQNetworkReply_operation(self.h))

proc request*(self: QNetworkReply, ): gen_qnetworkrequest.QNetworkRequest =

  gen_qnetworkrequest.QNetworkRequest(h: fcQNetworkReply_request(self.h))

proc error*(self: QNetworkReply, ): QNetworkReplyNetworkError =

  QNetworkReplyNetworkError(fcQNetworkReply_error(self.h))

proc isFinished*(self: QNetworkReply, ): bool =

  fcQNetworkReply_isFinished(self.h)

proc isRunning*(self: QNetworkReply, ): bool =

  fcQNetworkReply_isRunning(self.h)

proc url*(self: QNetworkReply, ): gen_qurl.QUrl =

  gen_qurl.QUrl(h: fcQNetworkReply_url(self.h))

proc header*(self: QNetworkReply, header: gen_qnetworkrequest.QNetworkRequestKnownHeaders): gen_qvariant.QVariant =

  gen_qvariant.QVariant(h: fcQNetworkReply_header(self.h, cint(header)))

proc hasRawHeader*(self: QNetworkReply, headerName: seq[byte]): bool =

  fcQNetworkReply_hasRawHeader(self.h, struct_miqt_string(data: cast[cstring](if len(headerName) == 0: nil else: unsafeAddr headerName[0]), len: csize_t(len(headerName))))

proc rawHeaderList*(self: QNetworkReply, ): seq[seq[byte]] =
